update targz files

--- a/01_builder_script/xx_make_targz.ipynb
+++ b/01_builder_script/xx_make_targz.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "import json\n",
     "\n",
-    "with open('dataset.json', 'w') as fp:\n",
+    "with open('dataset.jsonl', 'w') as fp:\n",
     "    for line in dataset:\n",
     "        fp.write(json.dumps(line)+'\\n')"
    ]
@@ -215,7 +215,7 @@
     "import tarfile\n",
     "\n",
     "with tarfile.open('dataset.tar.gz', 'w:gz') as tar:\n",
-    "    tar.add('dataset.json')"
+    "    tar.add('dataset.jsonl')"
    ]
   },
   {
